# handwerksuite

./: .dependency-cruiser.cjs  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AUDIT-REPORT.md  README.md  commitlint.config.js  frontend-development.plugin  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.workspace.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/landing/: .eslintrc.cjs  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/landing/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/landing/components/: auth-scene-wrapper.tsx  auth-scene.tsx  cookie-consent.tsx  fade-in.tsx  faq-dialog.tsx  header.tsx  hero-scene-wrapper.tsx  hero-scene.tsx
apps/landing/content/: faqs.ts  stats.ts  (+6 more)
apps/mobile/: capacitor.config.ts  index.html  package.json  vite.config.ts
apps/web/: next.config.ts  package.json  playwright.config.ts  tsconfig.json
docker/: docker-compose.yml
docker/init-scripts/: 01-init.sql
docker/powersync-config/: powersync.yaml  sync-rules.yaml
services/openbao/: config.hcl  setup-dev.sh
services/postgres/: rls-policies.sql
(+100 files in other folders)
