[package]
name = "handwerksuite-desktop"
version = "0.0.1"
edition = "2021"
description = "HandwerkSuite Desktop Application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
